# GammaC

./: .gitignore  BspTest.txt  CMakeLists.txt  LICENSE  Makefile  README.md  blockout.txt  gbsp.mk  main.cpp  testmap.txt
.devcontainer/: Dockerfile  devcontainer.json
BSP/: bsp.cpp  bsp.h  cmdlib.h  polylib.cpp  polylib.h  vec3.cpp  vec3.h  veclib.cpp
BSP/mathlib/: vec3.h
bsp-files/: 2brush.txt  BspTest.txt  blockout.txt  cube.txt  cubetest.txt  cubetesttris.txt  dango.txt  lighttest.txt  lighttest2.txt  testgi.txt
common/: bspfile.cpp  bspfile.h  cmdlib.cpp  cmdlib.h  gfiles.h  veclib.h
grak/common/: bspfile.h  bsplib.h  gfiles.h  polylib.cpp  polylib.h  veclib.cpp  veclib.h
grak/gbsp/: Makefile  brushbsp.cpp  gbsp.cpp  gbsp.h  main.cpp  map.cpp  vkdraw.cpp
maps/2brush/: scripts.txt
maps/blockout1/: scripts.txt
maps/cube/: scripts.txt
maps/cubetest/: scripts.txt
maps/dango/: scripts.txt
maps/lighttest/: scripts.txt
maps/testgi/: scripts.txt
mesh-files/: mesh1.txt  mesh2.txt
obj-meshes/: dangomap  dangomap.mtl
shaders/: default_shader.frag  default_shader.vert  fragment.glsl  vertex.glsl
src/: GRAK  Makefile  Math.cpp  Scene.cpp  Scene.hpp  main.cpp
src/bsp/: Bsp.cpp  Bsp.h
src/common/: Atlas.cpp  Atlas.hpp  FileReader.cpp  FileReader.hpp  FileWriter.cpp  FileWriter.hpp  GammaDir.hpp  GammaFile.hpp  Math.cpp  Math.hpp  MathDefs.hpp  bspfile.cpp  bspfile.h  cmdlib.cpp  cmdlib.h  gfiles.h  polylib.cpp  polylib.h  scriplib.cpp  scriplib.h  veclib.cpp  veclib.h
src/gamma/: GAMMA  Makefile  (+3 more)
vertex-meshes/: cubetest  cubetesttris
(+169 files in other folders)
